--- a/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -108,17 +108,17 @@
                             <img class="d-block img-fluid" src="~/img/2.jpg" />
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="banner-text">
-                                    <h2>This is Heaven</h2>
+                                    <h2>This is Bulgaria</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid"
-                             src="~/img/belograd.jpg" /> 
+                              src="~/img/3.jpg" />
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="banner-text">
-                                    <h2>This is Heaven</h2>
+                                    <h2>This is Bulgaria</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                             <img class="d-block img-fluid" src="~/img/1.jpg" />"
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="banner-text">
-                                    <h2>This is Heaven</h2>
+                                    <h2>This is Bulgaria</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                                 </div>
                             </div>
