--- a/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,105 +6,155 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.FirstName"></label>
-                <input asp-for="Input.FirstName" class="form-control" />
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.LastName"></label>
-                <input asp-for="Input.LastName" class="form-control" />
-                <span asp-validation-for="Input.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div class="row">
-                            @foreach (var provider in Model.ExternalLogins)
-                            {
-                                if (provider.Name == "Facebook")
-                                {
-                                    <p class="col-md-6">
-                                        <button type="submit"
-                                                class="shadow btn btn-block btn-facebook text-white"
-                                                style="background-color:#4064AC;border-color:#4064AC;"
-                                                name="provider"
-                                                value="@provider.Name"
-                                                title="Log in using your @provider.DisplayName account">
-                                            <div class="row d-flex justify-content-md-start">
-                                                <div class=" col-3 pl-0">
-                                                    <img src="~/img/faceboo-logo.png" width="20" style="height:25px;width:25px" />
-                                                </div>
-                                                <div class="col-7">@provider.Name</div>
-                                            </div>
-                                        </button>
-                                    </p>
-                                }
+<link href="~/css/login.css" rel="stylesheet" />
 
-                                else if (provider.Name == "Google")
-                                {
-                                    <p class="col-md-6">
-                                        <button type="submit"
-                                                class="shadow btn btn-block btn-google"
-                                                style="background-color:#fff;border-color:#fff;text-decoration-color:dimgrey"
-                                                name="provider"
-                                                value="@provider.Name"
-                                                title="Log in using your @provider.DisplayName account">
-                                            <div class="row d-flex justify-content-md-start">
-                                                <div class=" col-3">
-                                                    <img src="~/img/google-logo.png" width="20" style="height:25px;width:25px" />
-                                                </div>
-                                                <div class="col-7">@provider.Name</div>
-                                            </div>
-                                        </button>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<section class="login-block">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 login-sec">
+                <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <h3>Create a new account.</h3>
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.FirstName"></label>
+                        <input asp-for="Input.FirstName" class="form-control" />
+                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.LastName"></label>
+                        <input asp-for="Input.LastName" class="form-control" />
+                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.ConfirmPassword"></label>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </form>
+            </div>
+           
+            <div class="col-md-8  banner-sec">
+                
+                    <section>
+                        <h4>Or another service to register.</h4>
+                        <hr />
+                        @{
+                            if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                            {
+                                <div>
+                                    <p>
+                                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                        for details on setting up this ASP.NET application to support logging in via external services.
                                     </p>
-                                }
+                                </div>
                             }
+                            else
+                            {
+                                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                    <div class="row">
+                                        @foreach (var provider in Model.ExternalLogins)
+                                        {
+                                            if (provider.Name == "Facebook")
+                                            {
+                                                <p class="col-md-6">
+                                                    <button type="submit"
+                                                            class="shadow btn btn-block btn-facebook text-white"
+                                                            style="background-color:#4064AC;border-color:#4064AC;"
+                                                            name="provider"
+                                                            value="@provider.Name"
+                                                            title="Log in using your @provider.DisplayName account">
+                                                        <div class="row d-flex justify-content-md-start">
+                                                            <div class=" col-3 pl-0">
+                                                                <img src="~/img/faceboo-logo.png" width="20" style="height:25px;width:25px" />
+                                                            </div>
+                                                            <div class="col-7">@provider.Name</div>
+                                                        </div>
+                                                    </button>
+                                                </p>
+                                            }
+
+                                            else if (provider.Name == "Google")
+                                            {
+                                                <p class="col-md-6">
+                                                    <button type="submit"
+                                                            class="shadow btn btn-block btn-google"
+                                                            style="background-color:#fff;border-color:#fff;text-decoration-color:dimgrey"
+                                                            name="provider"
+                                                            value="@provider.Name"
+                                                            title="Log in using your @provider.DisplayName account">
+                                                        <div class="row d-flex justify-content-md-start">
+                                                            <div class=" col-3">
+                                                                <img src="~/img/google-logo.png" width="20" style="height:25px;width:25px" />
+                                                            </div>
+                                                            <div class="col-7">@provider.Name</div>
+                                                        </div>
+                                                    </button>
+                                                </p>
+                                            }
+                                        }
+                                    </div>
+                                </form>
+                            }
+                        }
+                    </section>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="~/img/2.jpg" />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <div class="banner-text">
+                                        <h2>This is Bulgaria</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid"
+                                     src="~/img/3.jpg" />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <div class="banner-text">
+                                        <h2>This is Bulgaria</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="~/img/1.jpg" />"
+                                <div class="carousel-caption d-none d-md-block">
+                                    <div class="banner-text">
+                                        <h2>This is Bulgaria</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
