--- a/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
+                        <input asp-for="Input.Password" class="form-control" id="submit"/>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -36,20 +36,22 @@
                                 <input asp-for="Input.RememberMe" />
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </label>
+                          
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" id="btn" style="display: none">
                         <p>
                             <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                         </p>
 
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn">Log in</button>
+                        <button type="submit"  class="btn btn-primary btn">Log in</button>
                     </div>
                 </form>
                 <hr />
+                <br />
                 <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                     <div class="row">
                         @foreach (var provider in Model.ExternalLogins)
@@ -97,48 +99,28 @@
 
             </div>
             <div class="col-md-8 banner-sec">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="~/img/2.jpg" />
-                            <div class="carousel-caption d-none d-md-block">
-                                <div class="banner-text">
-                                    <h2>This is Bulgaria</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid"
-                              src="~/img/3.jpg" />
-                            <div class="carousel-caption d-none d-md-block">
-                                <div class="banner-text">
-                                    <h2>This is Bulgaria</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="~/img/1.jpg" />"
-                            <div class="carousel-caption d-none d-md-block">
-                                <div class="banner-text">
-                                    <h2>This is Bulgaria</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                
+                <partial name="_PartialCarousel" />
             </div>
         </div>
 </section>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+
+<script>
+
+    $(document).ready(function () {
+        var count = 0;
+        $("#submit").on("click", function () {
+            if (count == 3) {
+                $("#btn").show();
+            } else count++
+            console.log(count);
+
+        });
+
+    });
+
+</script>
 }
