--- a/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -49,108 +49,71 @@
             </div>
            
             <div class="col-md-8  banner-sec">
-                
-                    <section>
-                        <h4>Or another service to register.</h4>
-                        <hr />
-                        @{
-                            if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                            {
-                                <div>
-                                    <p>
-                                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                        for details on setting up this ASP.NET application to support logging in via external services.
-                                    </p>
-                                </div>
-                            }
-                            else
-                            {
-                                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                    <div class="row">
-                                        @foreach (var provider in Model.ExternalLogins)
-                                        {
-                                            if (provider.Name == "Facebook")
-                                            {
-                                                <p class="col-md-6">
-                                                    <button type="submit"
-                                                            class="shadow btn btn-block btn-facebook text-white"
-                                                            style="background-color:#4064AC;border-color:#4064AC;"
-                                                            name="provider"
-                                                            value="@provider.Name"
-                                                            title="Log in using your @provider.DisplayName account">
-                                                        <div class="row d-flex justify-content-md-start">
-                                                            <div class=" col-3 pl-0">
-                                                                <img src="~/img/faceboo-logo.png" width="20" style="height:25px;width:25px" />
-                                                            </div>
-                                                            <div class="col-7">@provider.Name</div>
-                                                        </div>
-                                                    </button>
-                                                </p>
-                                            }
 
-                                            else if (provider.Name == "Google")
-                                            {
-                                                <p class="col-md-6">
-                                                    <button type="submit"
-                                                            class="shadow btn btn-block btn-google"
-                                                            style="background-color:#fff;border-color:#fff;text-decoration-color:dimgrey"
-                                                            name="provider"
-                                                            value="@provider.Name"
-                                                            title="Log in using your @provider.DisplayName account">
-                                                        <div class="row d-flex justify-content-md-start">
-                                                            <div class=" col-3">
-                                                                <img src="~/img/google-logo.png" width="20" style="height:25px;width:25px" />
-                                                            </div>
-                                                            <div class="col-7">@provider.Name</div>
-                                                        </div>
-                                                    </button>
-                                                </p>
-                                            }
-                                        }
-                                    </div>
-                                </form>
-                            }
+                <section>
+                    <h4>Or another service to register.</h4>
+                    <hr />
+                    @{
+                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                        {
+                            <div>
+                                <p>
+                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                </p>
+                            </div>
                         }
-                    </section>
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="~/img/2.jpg" />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <div class="banner-text">
-                                        <h2>This is Bulgaria</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid"
-                                     src="~/img/3.jpg" />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <div class="banner-text">
-                                        <h2>This is Bulgaria</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="~/img/1.jpg" />"
-                                <div class="carousel-caption d-none d-md-block">
-                                    <div class="banner-text">
-                                        <h2>This is Bulgaria</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        else
+                        {
+                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                <div class="row">
+                                    @foreach (var provider in Model.ExternalLogins)
+                                    {
+                                        if (provider.Name == "Facebook")
+                                        {
+                                            <p class="col-md-6">
+                                                <button type="submit"
+                                                        class="shadow btn btn-block btn-facebook text-white"
+                                                        style="background-color:#4064AC;border-color:#4064AC;"
+                                                        name="provider"
+                                                        value="@provider.Name"
+                                                        title="Log in using your @provider.DisplayName account">
+                                                    <div class="row d-flex justify-content-md-start">
+                                                        <div class=" col-3 pl-0">
+                                                            <img src="~/img/faceboo-logo.png" width="20" style="height:25px;width:25px" />
+                                                        </div>
+                                                        <div class="col-7">@provider.Name</div>
+                                                    </div>
+                                                </button>
+                                            </p>
+                                        }
 
-                    </div>
-                </div>
+                                        else if (provider.Name == "Google")
+                                        {
+                                            <p class="col-md-6">
+                                                <button type="submit"
+                                                        class="shadow btn btn-block btn-google"
+                                                        style="background-color:#fff;border-color:#fff;text-decoration-color:dimgrey"
+                                                        name="provider"
+                                                        value="@provider.Name"
+                                                        title="Log in using your @provider.DisplayName account">
+                                                    <div class="row d-flex justify-content-md-start">
+                                                        <div class=" col-3">
+                                                            <img src="~/img/google-logo.png" width="20" style="height:25px;width:25px" />
+                                                        </div>
+                                                        <div class="col-7">@provider.Name</div>
+                                                    </div>
+                                                </button>
+                                            </p>
+                                        }
+                                    }
+                                </div>
+                            </form>
+                        }
+                    }
+                </section>
+                <partial name="_PartialCarousel" />
+            </div>
             </div>
         </div>
 </section>
