Add original url in review view

--- a/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
+++ b/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
@@ -7,7 +7,7 @@
         <h5 class="card-title">Review for ...</h5>
         <h4 class="card-title">@this.Model.Name</h4>
         <p class="card-text">@this.Model.CityName ,@this.Model.Address </p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted"> <a href="@this.Model.OriginalUrl">link to the property</a></small></p>
     </div>
     <img class="card-img-bottom" src="@this.Model.MainImageUrl" alt="Card image cap">
 </div>
