--- a/Web/EasyTravel.Web/Views/Home/Results.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Results.cshtml
@@ -15,9 +15,9 @@
 else
 {
 
-    <div class="row">
+<div class="row">
 
-        <partial name="_PartialPropertiesInListViewModel" model="@Model" />
+    <partial name="FilterByCapacity" model="@Model" />
 
-    </div>
+</div>
 }
