--- a/Web/EasyTravel.Web/wwwroot/css/bookForm.css
+++ b/Web/EasyTravel.Web/wwwroot/css/bookForm.css
@@ -100,7 +100,8 @@ body {
     }
 
         .booking-form input[type="date"].form-control:invalid {
-            color: rgba(255, 255, 255, 0.5)
+            color: rgba(255, 255, 255, 0.5);
+            height: 50px
         }
 
         .booking-form input[type="date"].form-control + .form-label {
