--- a/Web/EasyTravel.Web/Views/Shared/_FooterPartial.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_FooterPartial.cshtml
@@ -63,8 +63,9 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/113.jpg"
-                             class="w-100" />
+
+                        <img src="~/img/1.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
@@ -74,8 +75,8 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/111.jpg"
-                             class="w-100" />
+                        <img src="~/img/2.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
@@ -85,8 +86,8 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/112.jpg"
-                             class="w-100" />
+                        <img src="~/img/3.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
@@ -96,8 +97,8 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/114.jpg"
-                             class="w-100" />
+                        <img src="~/img/SCAN-Travel-1-1030x579.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
@@ -107,8 +108,9 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/115.jpg"
-                             class="w-100" />
+
+                        <img src="~/img/00051912.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
@@ -118,8 +120,8 @@
                 <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                     <div class="bg-image hover-overlay ripple shadow-1-strong rounded"
                          data-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/fluid/city/116.jpg"
-                             class="w-100" />
+                        <img src="~/img/6.jpg" 
+                        class="w-100" />
                         <a href="#!">
                             <div class="mask"
                                  style="background-color: rgba(251, 251, 251, 0.2);"></div>
