Start ignoring appsettings.Production.json

--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EasyTravel.Common
 @model EasyTravel.Web.ViewModels.Home.CategoryListViewModel
 @{
-    this.ViewData["Title"] = "Home Page";
+    this.ViewData["Title"] = "Easy Travel";
 
 
 }
