--- a/Web/EasyTravel.Web/Views/Shared/_PartialPropertiesInListViewModel.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_PartialPropertiesInListViewModel.cshtml
@@ -19,7 +19,7 @@
                     <p class="card-text">@prop.Description</p>
                 </div>
                 <div class="card-footer">
-                    <a asp-controller="Properties" asp-action="ById" asp-route-id="@prop.Id" class="btn btn-primary">Read More</a>
+                    <a asp-controller="Properties" asp-action="ById" asp-route-id="@prop.Id" class="btn btn-primary">Виж повече</a>
                 </div>
             </div>
         </div>
