--- a/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/EasyTravel.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -50,20 +50,11 @@
            
             <div class="col-md-8  banner-sec">
                 <section>
-                    <h4>Or another service to register.</h4>
-                    <hr />
+                   
                     @{
-                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                        if ((Model.ExternalLogins?.Count ?? 0) != 0)
                         {
-                            <div>
-                                <p>
-                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                    for details on setting up this ASP.NET application to support logging in via external services.
-                                </p>
-                            </div>
-                        }
-                        else
-                        {
+                       
                             <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                                 <div class="row">
                                     @foreach (var provider in Model.ExternalLogins)
